--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -60,11 +60,10 @@
 - ✅ 4.输入 url 到看到页面发生了什么
 - ✅ cdn 主要放了什么，index.html,css,js 文件放到哪里，有做缓存，浏览器缓存有更新和变化怎么办，浏览器缓存缓存多长时间，哪些资源可以使用 cdn 引入，如何判断 ping
 - 跨域的解决方案，abc 三个域名 localstorage 共享，个二级域名不同 cookie 怎么传输，跨页面传输数据有哪些方式
-- 有做 ssr，预渲染和 ssr 区别
 - 多个 link 标签执行渲染顺序
-- link 标签会不会阻塞页面的渲染？说一下原因？
-- js 会阻塞页面的渲染吗？说一下原因？
-- css 会阻塞 html 的解析吗？为什么？
+- link 标签会不会阻塞页面的渲染？说一下原因？阻塞渲染，不阻塞解析
+- js 会阻塞页面的渲染吗？说一下原因？默认会阻，defer 不会，asyc 加载不会阻
+- css 会阻塞 html 的解析吗？为什么？不会阻塞解析，会阻塞渲染
 
 # css
 
@@ -113,7 +112,7 @@
 - ✅ 4.如何实现一个 plugin 插件
 - ✅ 5.webpack 构建过程
 - ✅ 6.webpack 构建优化、前端性能优化
-- 7.loader 执行顺序
+- ✅ 7.loader 执行顺序
 - ✅ 8.webpack 分包加载用的是哪个，分包的原理
 - ✅ 9.webpack 的 tree shaking 是怎么实现的
 - ✅ 10.热更新 HMR
@@ -146,20 +145,13 @@
 https://mp.weixin.qq.com/s/9ifXga_Z4Q51SJbLgr4fPQ
 
 - 性能优化，你会从哪几个方面考虑性能优化
-
-- 打包优化
-
+- ✅ 打包优化
 - 长列表优化
-
 - 内存泄露怎么解决，怎么定位
-
 - 说一个自己熟悉的项目
 - 小程序性能优化
-
 - 项目优化
-
 - 白屏优化措施
-
 - CSS 相关性能优化
 - performance
 - 新能指标、RAIL
