--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -146,7 +146,8 @@ https://mp.weixin.qq.com/s/9ifXga_Z4Q51SJbLgr4fPQ
 
 - 性能优化，你会从哪几个方面考虑性能优化
 - ✅ 打包优化
-- 长列表优化
+- ✅ vuecli 升级
+- ✅ 长列表优化
 - 内存泄露怎么解决，怎么定位
 - 说一个自己熟悉的项目
 - 小程序性能优化
