--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -100,6 +100,7 @@
 - ✅ axios 如何处理携带 cookies axios.defaults.withCredentials = true;
 - ✅ 6.reactive ref 区别
 - ✅ 7.vuex 的数据流 核心原理是什么
+- 有使用过自定义指令吗？有哪些钩子函数？分别代表什么呢
 
 - compiler 原理
 - diff 原理
