--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -35,6 +35,9 @@
 - ✅ 30.箭头函数于普通函数区别
 - ✅ 31.柯里化
 - 0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题？
+- 如何为对象扩展一个属性？
+- expect 脚本实现逻辑
+- symbol  怎么用？是否可以为空？
 
 # HTTP
 
@@ -64,6 +67,12 @@
 - link 标签会不会阻塞页面的渲染？说一下原因？阻塞渲染，不阻塞解析
 - js 会阻塞页面的渲染吗？说一下原因？默认会阻，defer 不会，asyc 加载不会阻
 - css 会阻塞 html 的解析吗？为什么？不会阻塞解析，会阻塞渲染
+- 浏览器通信：两个标签页想要共享 sessionStorage 的数据？如何做呢？
+- 浏览器从 html 响应到渲染出内容过程，渲染树和DOM树有什么区别
+- 缓存：js 和 css 怎么设置缓存时间？入口文件呢？
+- Echarts 渲染内核有哪些模式？canvas 和 svg 的区别？
+- 浏览器渲染过程中可以优化的点
+- 浏览器异常捕获
 
 # css
 
@@ -82,6 +91,8 @@
 - ✅ 13.1px dip dp
 - ✅ 14.css3 属性
 - ✅ 15.css 中的 px，rem，em，vw，vh
+- css模块化方案有哪些，scope实现原理
+- 伪元素 ::before 与伪类 :first-child 的区别
 
 # TS
 
@@ -101,9 +112,13 @@
 - ✅ 6.reactive ref 区别
 - ✅ 7.vuex 的数据流 核心原理是什么
 - 有使用过自定义指令吗？有哪些钩子函数？分别代表什么呢
-
 - compiler 原理
 - diff 原理
+- Object.defineProperty 定义的 get 中的 this 是谁
+- 详细说一下源码中，修改响应式属性后是怎么触发DOM更新的
+- Vue.use 做了什么？Vue.use 原理
+- Vue.minxins 做过什么功能，mixins.js 和 组件中生命周期函数执行顺序，以及选项合并策略
+- 分析 vue 响应式原理，vue 对于循环引用是怎么处理的?
 
 # webpack
 
@@ -120,6 +135,7 @@
 - webpack 如何实现的模块依赖关系 traverse ast ImportDeclaration
 - webpack 如何指定模块化规范（amd、cmd 这些）libraryTarget: 'umd',
 - dll 动态链接库
+- babel 插件是怎么实现的
 
 # node
 
@@ -149,13 +165,13 @@ https://mp.weixin.qq.com/s/9ifXga_Z4Q51SJbLgr4fPQ
 - ✅ 打包优化
 - ✅ vuecli 升级
 - ✅ 长列表优化
-- 内存泄露怎么解决，怎么定位
+- 内存泄露怎么解决，怎么定位，内存泄漏的方式有哪些
 - 说一个自己熟悉的项目
 - 小程序性能优化
 - 项目优化
 - 白屏优化措施
 - CSS 相关性能优化
-- performance
+- performance, 怎么通过 Performance 解决性能问题的
 - 新能指标、RAIL
 
 # 算法
