--- a/面试题/js/17.JS 中有哪些方法可以实现继承.md
+++ b/面试题/js/17.JS 中有哪些方法可以实现继承.md
@@ -81,17 +81,23 @@ console.log(new Cat());
 function Animate() {
   this.type = "animate";
 }
+Animate.prototype.getAnimate = function () {
+  console.log("getAnimate");
+};
 
 function Cat() {
   this.name = "cat";
   Animate.call(this, name);
 }
 
+Cat.prototype = Object.create(Animate.prototype); // 这种 Animate 原型方法会在父级
+Cat.prototype.getCat = function () {
+  console.log("getCat");
+};
+
 // Cat.prototype = new Animate() // 会多一个 Animate 属性
 
 // Cat.prototype = Animate.prototype // 这种  Cat.prototype  自己方法需要写到，这一行下面，Animate 原型方法跟 Cat 在同一级
-
-Cat.prototype = Object.create(Animate.prototype); // 这种 Animate 原型方法会在父级
 
 Cat.prototype.constructor = Cat;
 
