--- a/面试题/js/9.手写 instanceof.md
+++ b/面试题/js/9.手写 instanceof.md
@@ -17,8 +17,21 @@ const myInstanceof = (left, target) => {
     left = left.__proto__;
   }
 };
+
+const myInstanceofType2 = (left, target) => {
+  if (!left || !target) return false;
+  let leftValue = left.__proto__;
+  let rightValue = target.prototype;
+  while (true) {
+    if (leftValue === rightValue) return true;
+    if (!leftValue) return false;
+    leftValue = leftValue.__proto__;
+  }
+};
 console.log(myInstanceof(cat, Animation));
 console.log(myInstanceof(cat, Object));
+console.log(myInstanceofType2(cat, Animation));
+console.log(myInstanceofType2(cat, Object));
 ```
 
 当 instaceof 前面是 str 原始数据类型的时候，回执行 [Symbol.hasInstance] 方法
