--- a/面试题/css/2.flex.md
+++ b/面试题/css/2.flex.md
@@ -78,3 +78,53 @@ order: 排序值越小越靠前
 200 * 4/5 = 160
 100 * 3/5 = 60 -->
 ```
+
+https://mp.weixin.qq.com/s/is1ANAImt0WChsX8K2iyww
+
+## 缩小情况
+公式1:-  自身的基础宽度 - 超出宽度 *(自身宽度*收缩比例/总权重）
+其中总权重计算方式： 300 * 2 + 200 * 1 + 100 * 2 = 10000
+
+= 300-200*300*2/1000 = 180
+= 200-200*200*1/1000 = 160
+= 100-200*100*2/1000 = 60
+
+
+## 放大情况
+```html
+   <style>
+    .item {
+      display: flex;
+      width: 500px;
+      height: 100px;
+    }
+    .item0 {
+      width: 50px;
+      flex: none;
+      background-color: red;
+    }
+    .item1 {
+      flex: 1 1 50px;
+      background-color: green;
+    }
+    .item2 {
+      flex: 7 1 100px;
+      background-color: blue;
+    }
+  </style>
+  <body>
+    <div class="item">
+        <div class="item0">0</div>
+        <div class="item1">1</div>
+        <div class="item2">2</div>
+    </div>
+</body>
+```
+
+公式：自身的基础宽度 + 容器剩余宽度 *（自身伸张比例 / 所有子项伸张比例之和）
+其中总权重计算方式： 300 * 2 + 200 * 1 + 100 * 2 = 10000
+
+剩余宽度： 500-200 = 300
+= item0: 50
+= item1: 50 + 300*1/8= 87.5
+= item2: 100 + 300*7/8= 362.5
