--- a/面试题/css/6.BFC 应用、盒子模型.md
+++ b/面试题/css/6.BFC 应用、盒子模型.md
@@ -28,7 +28,7 @@
 
 基本概念：块级格式化上下文
 原理(渲染规则)
-1: BFC 在垂直方向上会发生重叠
+1: 同一个 BFC 内在垂直方向上会发生重叠
 2: BFC 区域不会与浮动元素的 box 重叠
 3: BFC 是个独立，外面元素不会影响到里面的，反过来也成立
 4: 计算 BFC 高度的时候，浮动元素也参与计算
@@ -37,3 +37,16 @@
 2: position != static/relative
 3: display == table 系列 table-cell、table-caption
 4: overflow != visibile
+
+### 为什么有 BFC
+- 浏览器渲染过程中，会遇到一些问题，
+    - 1、被浮动包裹的父容器没有高度
+    - 2、同一个 BFC 内在垂直方向上会发生重叠
+    - 3、多栏布局，浮动与未浮动元素发生覆盖
+## BFC 定义
+- 页面隔离的容器，内部元素和外部元素不会相互影响
+
+### BFC解决了那些问题
+- 1、浮动父容器没高度：浮动元素也参与高度计算，父容器 float: left; 或者 overflow: hidden; table: table-cell
+- 2、垂直方向重叠：创建两个 BFC, overflow: hidden; 或者 display: inline-block;
+- 3、BFC 区域不会与浮动元素的 box 重叠
