--- a/面试题/css/9.css 的 transform 和 animation 区别.md
+++ b/面试题/css/9.css 的 transform 和 animation 区别.md
@@ -34,6 +34,8 @@ animation: circle 2s steps(3, start) infinite;
 step-start: 黄色与蓝色相互切换
 step-end：红色与黄色相互切换
 
+https://designmodo.com/demo/stepscss/pawprints.html
+
 // ----
 
 animation: 3s ease-in 1s 2 reverse both paused slidein;
@@ -70,4 +72,48 @@ transition: margin-right 4s, color 1s;
 
 /* Apply to all changed properties */
 transition: all 0.5s ease-out;
+```
+
+
+## animation steps
+- 帧动画，我们不要平滑的移动效果，我们把每个步骤分段，没秒执行一段
+
+0.8 秒动 10步
+```js
+.hi {
+    width: 50px;
+    height: 72px;   // 矩形的宽高
+    background-image: url("http://s.cdpn.io/79/sprite-steps.png"); 
+    animation: play .8s steps(10) infinite;  // 分10步完成0到-500px完成并无限重复
+}
+@keyframes play {
+   from { background-position:    0px; }
+     to { background-position: -500px; }
+}
+```
+
+```js
+.s0 {
+	left: 1.25rem;
+	-webkit-animation: sMove 10s steps(10, start); // 1s 动1步，分10步
+}
+
+.ms0 {
+	left: 2rem;
+	-webkit-animation: sMove 1s  steps(10, start) infinite; // 1秒动 10 不
+}
+
+.ms10 {
+	left: 2.3rem;
+	-webkit-animation: sMove 100ms steps(10, start) infinite ; // 100ms 动 10 步
+}
+
+@-webkit-keyframes sMove {
+	0% {
+		background-position: -2.80rem 0;
+	}
+	100% {
+		background-position: 0 0;
+	}
+}
 ```
