--- a/面试题/浏览器/1.浏览器进程，渲染进程，渲染流程.md
+++ b/面试题/浏览器/1.浏览器进程，渲染进程，渲染流程.md
@@ -25,3 +25,23 @@
 - 浏览器主进程将默认图层和复合图层交给 GPU,GPU 将多个图层，最后显示
 
 - 前后端交互时候 cookie 跨域如何携带 withCredentials
+
+##  link 标签或者css 会阻塞 html 的解析吗？为什么？
+阻塞渲染，不阻塞解析
+
+浏览器渲染流程
+先进行 html 解析构建 dom 树，
+然后在 css 构建 om tree,
+
+## 浏览器从 html 响应到渲染出内容过程，渲染树和DOM树有什么区别
+渲染树是： css  os 树和 dom 结合
+
+## 浏览器渲染过程中可以优化的点
+- 减少重绘和回流
+- 操作dom 进行合并，并保存
+- 懒加载、异步加载
+- 虚拟加载
+- 预渲染、ssr
+- 双向绑定
+- cdn
+- 节流、防抖
