--- a/面试题/浏览器/2.说说 script 标签中的 defer 和 async 异同点.md
+++ b/面试题/浏览器/2.说说 script 标签中的 defer 和 async 异同点.md
@@ -26,3 +26,16 @@
 ![image.png](https://cdn.nlark.com/yuque/0/2020/png/424608/1580961732235-6cfdb5f6-9106-45c1-81a3-4fb4d03f3c12.png#align=left&display=inline&height=649&name=image.png&originHeight=1298&originWidth=1316&size=257753&status=done&style=none&width=658)
 ![image.png](https://cdn.nlark.com/yuque/0/2020/png/424608/1580961743904-dee7cacc-30cf-4242-932d-d17686e2a616.png#align=left&display=inline&height=421&name=image.png&originHeight=842&originWidth=1312&size=134146&status=done&style=none&width=656)
 [defer async](https://cloud.tencent.com/developer/article/1093912)
+
+## js 会阻塞页面的渲染吗？说一下原因？
+- 默认会阻，defer 加载执行都不会，async 加载不会阻，执行回阻塞
+- 第三方脚本延迟引发白屏，此时就可以用 async
+
+## defer应用 代码高亮
+- 其他多个脚本互相依赖
+- 脚本依赖 dom 元素渲染完毕
+
+## async 百度统计
+- 不关注文档是否渲染完毕
+- 多个脚本之间没有关系，没有其他脚本产生的数据
+
