--- a/面试题/HTTP/2.http 缓存原理，前端缓存了解哪些，网络缓存和前端缓存如何交互，协商缓存浏览器如何判断.md
+++ b/面试题/HTTP/2.http 缓存原理，前端缓存了解哪些，网络缓存和前端缓存如何交互，协商缓存浏览器如何判断.md
@@ -21,3 +21,8 @@ s-maxage 代理
 
 last-modify|if-modify-since 文件最后修改时间 秒 有一个问题，文件非秒，还有内容不变但是修改时间变化
 etag ｜ if-none-match 文件内容计算出的 hash，请求时进行比对，相同则返回 304，否则 200
+
+
+- app.js 都存在使用了 协商缓存
+- 字体图标base64 memeory cache
+- mathjax disk cache
