--- a/面试题/HTTP/8.DNS 寻址过程.md
+++ b/面试题/HTTP/8.DNS 寻址过程.md
@@ -1,6 +1,6 @@
 # DNS 寻址过程
 
-域名服务 Domain Name System
+域名服务 Domain Name Systemk, 
 
 - 找浏览器缓存
 - 操作系统缓存，host
@@ -21,3 +21,11 @@
 
 客户端-本地 dns 服务端：这部分属于递归查询。
 本地 dns 服务端---外网：这部分属于迭代查询
+
+## DNS 为什么快
+无连接UPD, 每一步都有缓存
+
+## 几级域名
+www.test.com 二级
+www.test.com.cn 三级
+几个点就是几级
