--- a/面试题/webpack/5.webpack 构建过程.md
+++ b/面试题/webpack/5.webpack 构建过程.md
@@ -108,3 +108,8 @@ function babelLoader(source) {
             };`;
 }
 ```
+
+## webpack 如何指定模块化规范（amd、cmd 这些）
+libraryTarget: 'umd'
+
+# webpack 如何实现的模块依赖关系 traverse ast ImportDeclaration
