--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -3,7 +3,7 @@
 - ✅ 1.`['1', '2', '3'].map(parseInt)` 返回值是
 - ✅ 2.`for...in` 和 `for...of` 的区别
 - ✅ 3.map，forEach 的区别
-- ✅ 4.symbol 是否可以遍历
+- ✅ 4.symbol 是否可以遍历，symbol 怎么用？是否可以为空
 - ✅ 5.引用类型怎么存储，js 中的堆和栈有什么区别
 - ✅ 6.slice，splice，区别，是否改变数组
 - ✅ 7.Object.prototype.toString 返回什么
@@ -34,10 +34,8 @@
 - ✅ 29.模块化
 - ✅ 30.箭头函数于普通函数区别
 - ✅ 31.柯里化
-- 0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题？
-- 如何为对象扩展一个属性？
-- expect 脚本实现逻辑
-- symbol  怎么用？是否可以为空？
+
+- 32.0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题？
 
 # HTTP
 
@@ -53,6 +51,7 @@
 - ✅ 9.get 和 post 有什么区别
 - ✅ 10.TCP 和 UDP 区别是什么
 - ✅ 11.谈谈你对 dns-prefetch 的理解
+
 - 12.TCP 滑动窗口、重试机制
 
 # 浏览器
@@ -61,7 +60,7 @@
 - ✅ 2.defer
 - ✅ 3.浏览器安全方面做了哪些， xss 工具方式是怎样，如何做，前端在 XSS、XSF 防御是如何做的
 - ✅ 4.输入 url 到看到页面发生了什么
-- ✅ cdn 主要放了什么，index.html,css,js 文件放到哪里，有做缓存，浏览器缓存有更新和变化怎么办，浏览器缓存缓存多长时间，哪些资源可以使用 cdn 引入，如何判断 ping
+
 - 跨域的解决方案，abc 三个域名 localstorage 共享，个二级域名不同 cookie 怎么传输，跨页面传输数据有哪些方式
 - 多个 link 标签执行渲染顺序
 - 浏览器通信：两个标签页想要共享 sessionStorage 的数据？如何做呢？
@@ -85,7 +84,8 @@
 - ✅ 13.1px dip dp
 - ✅ 14.css3 属性
 - ✅ 15.css 中的 px，rem，em，vw，vh
-- 伪元素 ::before 与伪类 :first-child 的区别
+
+- 16.伪元素 ::before 与伪类 :first-child 的区别
 
 # TS
 
