--- a/面试题/HTTP/10.TCP 和 UDP 区别是什么.md
+++ b/面试题/HTTP/10.TCP 和 UDP 区别是什么.md
@@ -2,7 +2,7 @@
 
 传输层的两个协议
 
-TCP: 有链接、可靠，缓慢的，保证交付保证消息顺序的，基于字节流传输控制协议 Transfer Control Protocol
+TCP: 有链接、可靠，缓慢的，双向的保证交付保证消息顺序的，基于字节流传输控制协议 Transfer Control Protocol
 UDP: 无连接(不需要三次握手) 不可靠，没序列，但快速的。头部开销小，可一对多，直播， User Data protocal 用户数据报
 
 # 链接
@@ -34,3 +34,11 @@ UDP 头小 8 字节 源端口、目标端口、校验和、长度
 
 TCP 有流量控制，窗口大小
 UDP 不能进行流量控制
+
+## 端口号为什么最大 65536
+
+源端口号一共是 16 位，所以 2^16-1 = 65535
+
+## UDP 应用
+
+DNS DHCP
