--- a/面试题/HTTP/12.TCP 滑动窗口、重试机制.md
+++ b/面试题/HTTP/12.TCP 滑动窗口、重试机制.md
@@ -4,6 +4,8 @@
 
 # 滑动窗口
 
+我能接受多少数据，
+
 > 为 TCP 是顺序发送的，操作系统将这些数据包一批一批的发送给对方，就像一个窗口，不停地往后移动，所以，我们称之为 TCP 滑动窗口协议
 > 滑动窗口能够提高 TCP 数据的传输性能。因为 TCP 无须对　　每一数据段进行确认, 只需要对发送一个窗口宽度的段确认一次。
 
@@ -15,3 +17,31 @@
 其次是传输效率，假如没有窗口，服务端是杂乱无章地进行发包，
 
 因为 TCP 的队首效应，如果有前面的包没有发送成功，就会不停的重试，反而造成更差的传输效率
+
+## 什么叫滑动窗口
+
+- 主要是控制流量的，根据频率不停调整，需要控制流量的方式
+- 客户端服务器分别有自己缓存区，通过网络状况，调整发送数据大小
+
+## 对头阻塞
+
+后面先到的，需要等待前面的完成，在进行窗口滑动
+
+## 超时重传 RTO
+
+前面包丢了，再次重新传递
+
+## 探测
+
+当接收方的缓存满了，发送方每隔一端事件发一个探测包，来询问能否调整窗口，若上层协议主动消耗接收方数据，接收方也会主动通知客户端
+
+## 流量控制
+
+控制发送方的频率
+
+## 粘包
+
+多个小包粘在一起
+
+Nagle 任意时刻内， 只能有一个未被确认的小段
+cork 小包合并成一个， 一起发送
