--- a/面试题/HTTP/5.http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进.md
+++ b/面试题/HTTP/5.http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进.md
@@ -5,7 +5,7 @@
 - 长链接、断点续传，管线化
 
 引入了持久链接，即 TCP 默认不关闭，可以被多个请求复用
-引入管道机制，一个 TCP 连接，可以同时发送多个请求，浏览器一般是 6 哥
+引入管道机制，一个 TCP 连接，可以同时发送多个请求，浏览器一般是 6 个
 新增了一些缓存的字段
 新增了一些方法，PUT、DELETE、OPTIONS、PATCH
 支持断点续传，通过请求头字段 Rang 来实现
@@ -22,7 +22,7 @@
 
 ## http3
 
-> 基于 UDP
+> 基于 UDP, 添加了 QUIC 协议
 
 - 拥塞控制
 - 扩展了多路复用
