--- a/面试题/浏览器/4.输入url到看到页面发生了什么.md
+++ b/面试题/浏览器/4.输入url到看到页面发生了什么.md
@@ -46,3 +46,75 @@
 
 - JS 引擎解析线程
   - EventLoop 作用域链 变量提升 回收机制 垃圾回收 作用域链 原型链
+
+## OSI 七层模型
+
+理想化模型，给我们网络划分层次，复杂内容简单化，专人干专事
+下一层为上一层做服务的
+
+应用层：接口 【报文】
+表式：数据进行描述、压缩
+会话：建立管理会话
+传输层：UDP TCP 协议给对方传过去数据，丢了重传【数据端-增加端口】
+网络层：寻址找到对方【数据包-增加 ip】
+数据链路层：讲两个设备进行连接，中转【数据帧-增加 mac 地址】
+物理层：怎么把数据传输过去 用 0、1 表示
+
+## 每一层的数据格式是
+
+- 报文：应用层+数据
+- 数据段：传输层+数据+端口
+- 数据包：网络层+数据+端口+ip
+- 数据帧：数据链路鞥+数据+端口+ip+mac 地址
+
+## ip 地址 + mac 地址
+
+目的 ip 地址 找到 mac 地址
+
+- ip 地址不是固定的
+
+```js
+// ipV4
+255.255.255.255 = 255 * 255 *  255 * 255 = 42 亿个
+
+// ipv6
+4444.4444.4444.4444.4444.4444.4444.4444
+```
+
+- mac 每个网卡自动的 mac 地址，原则上不变
+
+## 每个层的设备有哪些
+
+### 物理层设备
+
+- 光线、电缆
+  网线有大传输距离 100，需要放大器，解决距离
+
+### 链路层
+
+- 交换机，有 mac 地址映射表
+
+### 网络层
+
+- 路由器（网关）wan lan
+- 不具备 wan 就是交换机
+- 与交换机区别，就是可以上网
+
+mac 地址在变化，ip 是不变的
+
+## 每一层的协议
+
+> 约定和规范, 网络层以上有协议
+
+- 应用层：HTTP DNS DHCP
+- 传输层：TCP UDP
+- 网络层：IP ARP
+
+### ARP
+
+ip 转化为 mac, 最终通过 mac 转化传输，做一个广播
+
+### DHCP
+
+动态主机配置协议，基于 UDP
+自动分配 IP， 无需手动配置
