--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -34,8 +34,7 @@
 - ✅ 29.模块化
 - ✅ 30.箭头函数于普通函数区别
 - ✅ 31.柯里化
-
-- 32.0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题？
+- ✅ 32.0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题？
 
 # HTTP
 
@@ -51,8 +50,8 @@
 - ✅ 9.get 和 post 有什么区别
 - ✅ 10.TCP 和 UDP 区别是什么
 - ✅ 11.谈谈你对 dns-prefetch 的理解
-
-- 12.TCP 滑动窗口、重试机制
+- ✅ 12.TCP 滑动窗口、重试机制
+- 滑动阻塞、慢重传、快重传
 
 # 浏览器
 
@@ -84,8 +83,7 @@
 - ✅ 13.1px dip dp
 - ✅ 14.css3 属性
 - ✅ 15.css 中的 px，rem，em，vw，vh
-
-- 16.伪元素 ::before 与伪类 :first-child 的区别
+- ✅ 16.伪元素 ::before 与伪类 :first-child 的区别
 
 # TS
 
