--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -61,10 +61,8 @@
 - ✅ 4.输入 url 到看到页面发生了什么
 
 - 跨域的解决方案，abc 三个域名 localstorage 共享，个二级域名不同 cookie 怎么传输，跨页面传输数据有哪些方式
-- 多个 link 标签执行渲染顺序
-- 浏览器通信：两个标签页想要共享 sessionStorage 的数据？如何做呢？
-- Echarts 渲染内核有哪些模式？canvas 和 svg 的区别？
-- 浏览器异常捕获
+- 浏览器通信：两个标签页想要共享 sessionStorage 的数据，如何做呢
+- Echarts 渲染内核有哪些模式？canvas 和 svg 的区别
 
 # css
 
