--- a/面试题/css/2.flex.md
+++ b/面试题/css/2.flex.md
@@ -16,6 +16,9 @@ flex: 放大 缩小
 align-self: 覆盖父亲的 align-item, 定义单个 align-self
 order: 排序值越小越靠前
 
+## flex: 1
+是它的缩写 flex: 1 1 0%;
+
 ```html
 <!DOCTYPE html>
 <html lang="en">
