--- a/面试题/js/22.不用 promise, 那些可实现 promise generator.md
+++ b/面试题/js/22.不用 promise, 那些可实现 promise generator.md
@@ -128,4 +128,72 @@ arr = [...gen]; // ["a", "b", "c", "d", "e"]
 
 ---
 
+# Generator 原理
+```js
+// 模拟实现
+function* foo() {
+  yield 'result1'
+  yield 'result2'
+  yield 'result3'
+}
+  
+const gen = foo()
+console.log(gen.next().value)
+console.log(gen.next().value)
+console.log(gen.next().value)
+
+
+// 生成器函数根据 yield 语句将代码分割为 switch-case 块，后续通过切换_context.prev和_context.next来分别执行各个case
+function gen$(_context) {
+  while (1) {
+    switch (_context.prev = _context.next) {
+      case 0:
+        _context.next = 2;
+        return 'result1';
+
+      case 2:
+        _context.next = 4;
+        return 'result2';
+
+      case 4:
+        _context.next = 6;
+        return 'result3';
+
+      case 6:
+      case "end":
+        return _context.stop();
+    }
+  }
+}
+
+var context = {
+  next:0,
+  prev: 0,
+  done: false,
+  stop: function stop () {
+    this.done = true
+  }
+}
+
+let gen = function() {
+  return {
+    next: function() {
+      value = context.done ? undefined: gen$(context)
+      done = context.done
+      return {
+        value,
+        done
+      }
+    }
+  }
+} 
+
+// 测试使用
+var g = gen() 
+g.next()  // {value: "result1", done: false}
+g.next()  // {value: "result2", done: false}
+g.next()  // {value: "result3", done: false}
+g.next()  // {value: undefined, done: true}
+```
+
 # async 是 Generator 函数的语法糖，能解释一下吗
