--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -90,6 +90,7 @@
 - ts 中的泛型 <T>
 
 # vue
+
 - ✅ 1.vue 响应式原理
 - ✅ 2.vue 数组是否响应
 - ✅ 3.虚拟 dom
@@ -99,11 +100,9 @@
 - ✅ axios 如何处理携带 cookies axios.defaults.withCredentials = true;
 - ✅ 6.reactive ref 区别
 - ✅ 7.vuex 的数据流 核心原理是什么
-- 有使用过自定义指令吗？有哪些钩子函数？分别代表什么呢
-- compiler 原理
-- diff 原理
-- 详细说一下源码中，修改响应式属性后是怎么触发DOM更新的
-- Vue.minxins 做过什么功能，mixins.js 和 组件中生命周期函数执行顺序，以及选项合并策略
+- ✅ 8.有使用过自定义指令吗？有哪些钩子函数？分别代表什么呢
+- ✅ 9.Vue.minxins 做过什么功能，mixins.js 和 组件中生命周期函数执行顺序，以及选项合并策略
+- ✅ 10.compiler diff 原理
 
 # webpack
 
@@ -184,6 +183,7 @@ https://mp.weixin.qq.com/s/9ifXga_Z4Q51SJbLgr4fPQ
 - 小程序分包怎么用，分包的原理是什么
 
 # 项目
+
 - vue3.0 vite ts
 - 微前端
 - 监控
