--- a/面试题/css/9.css 的 transform 和 animation 区别.md
+++ b/面试题/css/9.css 的 transform 和 animation 区别.md
@@ -2,7 +2,7 @@
 
 transform 对元素本身进行变形
 animation 对元素的多个属性变形, 多个桢
-transtion 对元素的多个属性变形, 只要开始结束桢
+transition 对元素的多个属性变形, 只要开始结束桢
 
 ## transform
 
@@ -74,16 +74,17 @@ transition: margin-right 4s, color 1s;
 transition: all 0.5s ease-out;
 ```
 
-
 ## animation steps
+
 - 帧动画，我们不要平滑的移动效果，我们把每个步骤分段，没秒执行一段
 
-0.8 秒动 10步
+  0.8 秒动 10 步
+
 ```js
 .hi {
     width: 50px;
     height: 72px;   // 矩形的宽高
-    background-image: url("http://s.cdpn.io/79/sprite-steps.png"); 
+    background-image: url("http://s.cdpn.io/79/sprite-steps.png");
     animation: play .8s steps(10) infinite;  // 分10步完成0到-500px完成并无限重复
 }
 @keyframes play {
