--- a/面试题/css/5.回流和重绘.md
+++ b/面试题/css/5.回流和重绘.md
@@ -70,3 +70,18 @@ getBoundingClientRect()
   也可以先为元素设置 display: none，操作结束后再把它显示出来。因为在 display 属性为 none 的元素上进行的 DOM 操作不会引发回流和重绘。
   避免频繁读取会引发回流/重绘的属性，如果确实需要多次使用，就用一个变量缓存起来。
   对具有复杂动画的元素使用绝对定位，使它脱离文档流，否则会引起父元素及后续元素频繁回流。
+
+```js
+const list = document.querySelector("#list");
+const fruits = ["Apple", "Orange", "Banana", "Melon"];
+
+const fragment = document.createDocumentFragment();
+
+fruits.forEach((fruit) => {
+  const li = document.createElement("li");
+  li.innerHTML = fruit;
+  fragment.appendChild(li);
+});
+
+list.appendChild(fragment);
+```
