--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -35,6 +35,7 @@
 - ✅ 30.箭头函数于普通函数区别
 - ✅ 31.柯里化
 - ✅ 32.0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题？
+- 33 RAF 和 RIC 是什么
 
 # HTTP
 
@@ -103,6 +104,7 @@
 - ✅ 8.有使用过自定义指令吗？有哪些钩子函数？分别代表什么呢
 - ✅ 9.Vue.minxins 做过什么功能，mixins.js 和 组件中生命周期函数执行顺序，以及选项合并策略
 - ✅ 10.compiler diff 原理
+- ✅ 11.vue-router
 
 # webpack
 
