--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -9,13 +9,13 @@
 - ✅ 7.Object.prototype.toString 返回什么
 
 - ✅ 8.闭包，场景
-- ✅ 9.手写 instanceof
+- ✅ 9.typeof、数据类型、instanceof、手写 instanceof
 - ✅ 10.什么是面向对象
 - ✅ 11.ES6 上数组上扩展了哪些方法
 - ✅ 12.事件机制捕获、冒泡
 - ✅ 13.JS 中通过 `bind` 绑定的方法，再使用 `apply` 或 `call` 会改变它的 `this` 吗，几个原理
 - ✅ 14.事件循环
-- ✅ 15.实现 reduce foreach
+- ✅ 15.实现 reduce foreach, forEach与for循环，谁的性能更好
 
 - ✅ 16.ES6 中 Reflect 对象，它什么优点
 - ✅ 17.JS 中有哪些方法可以实现继承
@@ -25,17 +25,17 @@
 
 - ✅ 21.ajax fetch axios 区别，ajax 实现原理, axios 原理是什么
 - ✅ 22.不用 promise, 那些可实现 promise generator🌹
-- ✅ 23.Promise 原理、方法，promise race all allsetted🌹
+- 23.Promise 原理、方法，promise race all allsetted 🌹
 - ✅ 24.为什么原生的 form 表单提交没有跨域问题（form 请求和 ajax 请求有什么不同）
-- ✅ 25.防抖和节流应用场景
-- ✅ 26.new 操作符
-- ✅ 27.什么是作用域链，执行上下文
+- 25.防抖和节流应用场景
+- ✅ 26.new 操作符, 构造函数和普通函数区别, 函数有 return 返回什么
+- 27.什么是作用域链，执行上下文，预编译
 - ✅ 28.[]+{}
 - ✅ 29.模块化
 - ✅ 30.箭头函数于普通函数区别
 - ✅ 31.柯里化
-- ✅ 32.0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题？
-- 33 RAF 和 RIC 是什么
+- ✅ 32.0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题，number 最大数
+- ✅ 33 RAF 和 RIC 是什么
 
 # HTTP
 
@@ -195,3 +195,4 @@ https://mp.weixin.qq.com/s/9ifXga_Z4Q51SJbLgr4fPQ
 
 https://www.yuque.com/zaotalk/interview/iv3pyp#ehMC
 http://muyiy.cn/question/js/2.html
+https://juejin.cn/post/7028478428680552456#heading-40
