--- a/面试题/js/32.0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题，number 最大数.md
+++ b/面试题/js/32.0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题，number 最大数.md
@@ -32,3 +32,16 @@ function numbersequal(a,b){
 var a=0.1+0.2, b=0.3;
 console.log(numbersequal(a,b));  //这里就为true了
 ```
+
+## number 最大数
+- 安全数字范围 15位一下
+
+- JavaScript 并不能表示任意位的整数，最大的整数是 Number.MAX_SAFE_INTEGER(9007199254740991)，最小的整数是N umber.MIN_SAFE_INTEGER(-9007199254740991)
+
+- 特别注意，很多ID是超出这个范围的，所以ID最好是用string，当ID超出15位数的话，就肯定要用字符串类型了。
+- 超出会失准
+
+```js
+var a = 9007199254740995
+a; // 9007199254740996
+```
