--- a/面试题/js/22.不用 promise, 那些可实现 promise generator.md
+++ b/面试题/js/22.不用 promise, 那些可实现 promise generator.md
@@ -36,6 +36,34 @@ promise.then(
 );
 ```
 
+```js
+function getCallSettings() {
+  return fetch('/')
+}
+function* dealData() {
+  try {
+    let settingInfo = yield getCallSettings();
+    console.log(settingInfo, 'mty');
+    // do something……
+    return settingInfo
+  } catch (err) {
+    console.log(err); // 接收错误
+  }
+  return 'abc';
+}
+
+let it = dealData();
+let promise = it.next().value; // 注意，这里拿到yield出来的promise
+promise.then(
+  (info) => {
+    it.next(info); // 拿到info传给yield表达式
+  },
+  (err) => {
+    it.throw(err); // 抛出错误
+  }
+);
+```
+
 # Generator 函数和普通函数有什么区别？
 
 - generator 迭代器函数，可以暂停可以恢复，generator 是协程 在 ES6 实现，最大特点交出函数执行权，控制迭代器的函数，可以暂停可以恢复
