--- a/面试题/js/8.闭包.md
+++ b/面试题/js/8.闭包.md
@@ -1,11 +1,9 @@
 # 闭包
 
 - 有权访问另一个函数作用域中的变量的函数
-- 一个函数访问了另一个函数的变量
 - 函数 A 内部有函数 B， B 可以访问到函数 A 变量，那么函数 B 就是闭包
 
 ## 产生闭包
-
 ```js
 function fn() {
   var mty = 10;
@@ -22,6 +20,10 @@ function fn() {
 ## 应用场景
 
 > 访问私有方法和变量
+- return 返回函数：无网、音量检测：调用之后，返回销毁方法、无网、音量
+- 柯里化: 函数可以分多次调用，从而得到结果，设置私有变量
+- bind：暂存 this context
+- 自执行函数：for 循环里面有异步操作，异步操作需要用到 index
 
 - 上报：
 
@@ -94,3 +96,11 @@ var div = getId("div1");
 - dom 引用：dom 删除时，引用未解除
 - 意外全局变量
 - 监听事件：未正确销毁
+
+
+# 为什么不创建一个全局变量来代替这个局部变量？
+- 因为全局变量会被污染或者被修改。
+- 闭包能够访问里面的变量，是由于作用域链，用到了函数嵌套中，内部函数能够访问父级函数作用域的变量这个理念。
+
+
+# 内存泄漏排查
