--- a/面试题/js/22.不用 promise, 那些可实现 promise generator.md
+++ b/面试题/js/22.不用 promise, 那些可实现 promise generator.md
@@ -225,3 +225,45 @@ g.next(); // {value: undefined, done: true}
 ```
 
 # async 是 Generator 函数的语法糖，能解释一下吗
+async + await => co + generator 语法糖
+
+# co
+```js
+const fetchData = (data) => {
+  return new Promise((resolve, reject) => {
+    setTimeout(() =>{
+      resolve(data)
+    })
+  })
+}
+
+function* foo() {
+  let data1 = yield fetchData(1)
+  data1++;
+  let data2 = yield fetchData(data1)
+  data2++;
+  const data3 = yield fetchData(data2)
+  return data3;
+}
+
+function co(it) {
+  return new Promise(function (resolve, reject) {
+    function step(d) {
+        let { value, done } = it.next(d);
+        if (!done) {
+            value.then(function (data) { // 2,txt
+              console.log(data);
+              step(data)
+            }, reject)
+        } else {
+            resolve(value);
+        }
+    }
+    step();
+  });
+}
+
+co(foo()).then(function (data) {
+  console.log(data)
+})
+```
