--- a/面试题/webpack/3.source map 怎么用.md
+++ b/面试题/webpack/3.source map 怎么用.md
@@ -6,7 +6,7 @@
 
 cheap: 只看行，不看列，无论生产还是开发都会使用这个，列信息是没有意义的
 module: 不可忽略，我们需要定位到原始的 jsx ts 原始代码，而不是编译后的
-source-map: 需要 .map 文件，故不可忽咧
+source-map: 需要 .map 文件，故不可忽略
 eval：
 
 - eval 包裹模块代码，eval 模式是使用 eval 将 webpack 中每个模块包裹，然后在模块末尾添加模块来源//# souceURL， 依靠 souceURL 找到原始代码的位置
