--- a/面试题/webpack/5.webpack 构建过程.md
+++ b/面试题/webpack/5.webpack 构建过程.md
@@ -3,11 +3,16 @@
 - 初始化参数：将 shell 和 配置文件中的 参数进行合并，得到最终参数
 - 初始化 compiler ：初始化 Compiler 对象，加载所有配置的插件，注册所有的插件
 - 开始编译：开始执行 compire run，
-  - 从入口 entry 开始分析，
-  - 解析文件通过 loader 进行编译
-  - 递归找到模块依赖模块
-  - 根据 entry, 组装多个包含多个模块的 chunk
-  - 每个 chunk 包装成一个文件并输出
+  - 确定入口：从入口 entry 开始分析，
+  - 编译模块：调用所有配置的 Loader 对文件进行编译解析，递归找到模块依赖模块，直到所有入口文件都经过处理
+  - 输出资源：根据入口和模块的依赖，组装多个包含多个模块的 chunk，把每个 chunk 转化成一个单独文件加入到输出文件列表
+  - 文件输出：每个 chunk 包装成一个文件并输出
+
+## 构建过程简易
+
+- 初始化：启动构建，读取与合并配置参数，加载 Plugin，实例化 Compiler
+- 编译：从 Entry 出发，针对每个 Module 串行调用对应的 Loader 去翻译文件的内容，再找到该 Module 依赖的 Module，递归地进行编译处理
+- 输出：将编译后的 Module 组合成 Chunk，将 Chunk 转换成文件，输出到文件系统中
 
 ```js
 let fs = require("fs");
@@ -110,6 +115,7 @@ function babelLoader(source) {
 ```
 
 ## webpack 如何指定模块化规范（amd、cmd 这些）
+
 libraryTarget: 'umd'
 
 # webpack 如何实现的模块依赖关系 traverse ast ImportDeclaration
