--- a/面试题/浏览器/1.浏览器进程，渲染进程，渲染流程.md
+++ b/面试题/浏览器/1.浏览器进程，渲染进程，渲染流程.md
@@ -1,23 +1,24 @@
 # 浏览器进程
 
 浏览器进程分为：
-
+>> 从上到下，从左到右，从外到里
 - 主进程
-- GPU 进程
 - 插件进程
 - 渲染进程
+- GPU 进程
+- 网络进程
 
-# 渲染进程
-
+# 渲染进程的线程
+>> 先总后分
 - JS 引擎线程：和渲染互斥
-- 事件处理：点击右键
-- 定时器：setTimeout setInterval
-- 异步请求 XMLHttpRequest
-- GUI （布局、绘制、渲染、回流重绘）
+  - 事件处理
+  - 计时器：setTimeout setInterval
+  - 异步请求 XMLHttpRequest
+- GUI 渲染页面（解析、布局、绘制、回流重绘）
 
 # 浏览器渲染流程
 
-- html 构建 dom 树
+- html 解析构建 dom 树
 - css 构建 om CSS 树
 - dom 和 om 树合成 render 树
 - 布局 render 树，计算、布局
@@ -28,10 +29,6 @@
 
 ##  link 标签或者css 会阻塞 html 的解析吗？为什么？
 阻塞渲染，不阻塞解析
-
-浏览器渲染流程
-先进行 html 解析构建 dom 树，
-然后在 css 构建 om tree,
 
 ## 浏览器从 html 响应到渲染出内容过程，渲染树和DOM树有什么区别
 渲染树是： css  os 树和 dom 结合
@@ -45,3 +42,11 @@
 - 双向绑定
 - cdn
 - 节流、防抖
+
+## JS 为什么是单线程的
+单线程特点：同一时间只能做一件事情
+如果是多线程，可能互相之间发生冲突，js 操作 dom, 防止互相发生覆盖，如果一个修改一个删除，浏览器决定由那个线程生效。
+避免锁加深复杂性。
+
+## JS 为什么阻塞页面加载
+如果在修改这些元素属性同时渲染界面（即 JavaScript 线程和 UI 线程同时运行）,那么渲染线程前后获得的元素数据就可能不一致了
