--- a/面试题/浏览器/2.说说 script 标签中的 defer 和 async 异同点.md
+++ b/面试题/浏览器/2.说说 script 标签中的 defer 和 async 异同点.md
@@ -7,20 +7,20 @@
 - 指定 async 属性的目的是不让页面等待两个脚本下载和执行
 
 文档渲染：执行的时候阻挡文档渲染
-脚本加载：加载 1 后立即执行，加载 2 后立即执行
+脚本加载顺序：加载 1 后立即执行，加载 2 后立即执行
 
 ## defer 代码高亮
 
 - 文档渲染-下载脚本 1、2，脚本都下载完，一起立刻执行，执行完后，才执行 DOMContentLoaded
   文档渲染：不阻挡
-  脚本加载：加载后，需要等到 1、2 都加载完成，一起执行
+  脚本加载顺序：加载后，需要等到 1、2 都加载完成，一起执行
 
 ## 普通
 
 - 遇到 script 会阻止 dom 渲染，需要 script1\2 都加载并执行完了之后；没渲染完 dom 继续渲染，渲染完了执行 DOMContentLoaded
 
 文档渲染：加载和执行都阻挡文档渲染
-脚本加载：1、2 都加载完毕之后，分别执行 1 和执行 2
+脚本加载顺序：1、2 都加载完毕之后，分别执行 1 和执行 2
 
 ![image.png](https://cdn.nlark.com/yuque/0/2020/png/424608/1580961778689-c6d6bee9-401d-4c2c-b859-4e21bd69b870.png#align=left&display=inline&height=411&name=image.png&originHeight=822&originWidth=826&size=106165&status=done&style=none&width=413)
 ![image.png](https://cdn.nlark.com/yuque/0/2020/png/424608/1580961732235-6cfdb5f6-9106-45c1-81a3-4fb4d03f3c12.png#align=left&display=inline&height=649&name=image.png&originHeight=1298&originWidth=1316&size=257753&status=done&style=none&width=658)
@@ -39,3 +39,15 @@
 - 不关注文档是否渲染完毕
 - 多个脚本之间没有关系，没有其他脚本产生的数据
 
+
+
+## 下载-影响渲染的有
+普通script
+
+## 执行-影响渲染的有
+普通script\async
+
+## JS 执行顺序
+- async 谁先下载完就执行谁，互相没关系
+- defer 谁在前先执行谁
+- script 谁在前先执行谁
