--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -36,6 +36,7 @@
 - ✅ 31.柯里化
 - ✅ 32.0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题，number 最大数
 - ✅ 33 RAF 和 RIC 是什么
+34.ES6中set、map、weakMap的区别
 
 # HTTP
 
@@ -61,6 +62,8 @@
 - ✅ 3.浏览器安全方面做了哪些， xss 工具方式是怎样，如何做，前端在 XSS、XSF 防御是如何做的
 - ✅ 4.输入 url 到看到页面发生了什么
 
+- 盒子模型、怪异模型、IE模型
+- box-sizing
 - 跨域的解决方案，abc 三个域名 localstorage 共享，个二级域名不同 cookie 怎么传输，跨页面传输数据有哪些方式
 - 浏览器通信：两个标签页想要共享 sessionStorage 的数据，如何做呢
 - Echarts 渲染内核有哪些模式？canvas 和 svg 的区别
@@ -105,6 +108,9 @@
 - ✅ 9.Vue.minxins 做过什么功能，mixins.js 和 组件中生命周期函数执行顺序，以及选项合并策略
 - ✅ 10.compiler diff 原理
 - ✅ 11.vue-router
+- computed和watch的区别
+- Vue2 和 Vue3 区别
+- computed的底层原理
 
 # webpack
 
