--- a/面试题/HTTP/6.http 和 https 的区别.md
+++ b/面试题/HTTP/6.http 和 https 的区别.md
@@ -56,7 +56,7 @@ https://zhuanlan.zhihu.com/p/43789231
 
 ## 非对称加密+对称加密(为什么需要数字证书)
 
-- 非堆成：客户端发送给服务器：客户端用(服务器的公钥)加密自己的密钥，服务器用自己私钥解开的到密钥
+- 非对称：客户端发送给服务器：客户端用(服务器的公钥)加密自己的密钥，服务器用自己私钥解开的到密钥
 - 对称加密：用密钥进行加密传输
 
 带来的问题：有可能出现狸猫换太子，根本原因是浏览器**无法确认收到的公钥是不是网站自己**的
