--- a/面试题/css/9.css 的 transform 和 animation 区别.md
+++ b/面试题/css/9.css 的 transform 和 animation 区别.md
@@ -101,7 +101,7 @@ transition: all 0.5s ease-out;
 
 .ms0 {
 	left: 2rem;
-	-webkit-animation: sMove 1s  steps(10, start) infinite; // 1秒动 10 不
+	-webkit-animation: sMove 1s  steps(10, start) infinite; // 1秒动 10 步
 }
 
 .ms10 {
