--- a/面试题/js/27.什么是作用域链，执行上下文.md
+++ b/面试题/js/27.什么是作用域链，执行上下文.md
@@ -38,8 +38,10 @@ function one() {
   two();
 }
 var a = 1;
-one(); // 1
+one(); 
 
+// -----
+// 1
 let globalEC = {
   vo: {
     one: () => {},
@@ -61,7 +63,9 @@ function sum(a, b) {
   };
   a();
 }
-sum(1, 2); // 打印2
+sum(1, 2); 
+
+// 打印2
 ```
 
 ```js
