--- a/面试题/js/8.闭包.md
+++ b/面试题/js/8.闭包.md
@@ -97,6 +97,17 @@ var div = getId("div1");
 - 意外全局变量
 - 监听事件：未正确销毁
 
+- dom 删除引用未解除
+
+```js
+// 拿到待删除节点:
+var self = document.getElementById('to-be-removed');
+// 拿到父节点:
+var parent = self.parentElement;
+// 删除:
+var removed = parent.removeChild(self);
+removed === self; // true
+```
 
 # 为什么不创建一个全局变量来代替这个局部变量？
 - 因为全局变量会被污染或者被修改。
