--- a/面试题/vue/11.vue-router.md
+++ b/面试题/vue/11.vue-router.md
@@ -22,6 +22,17 @@ watch: { //通过watch来监听路由变化
 }
 ```
 
+失活组件的beforeRouterLeave => 
+  全局的beforeEach => 
+  重用组件的beforeRouterUpdate => 
+  路由组件的beforeEnter => 解析异步路由组件=>
+  被激活组件的beforeRouterEnter => 
+  全局的beforeResolve => 
+  导航被确认 => 
+  全局的afterEach => 
+  触发Dom更新 => 
+调用beforeRouterEnter的next函数
+
 ## 路由钩子函数
 
 - 全局前置守卫: beforeEach
