--- a/面试题/js/1.['1', '2', '3'].map(parseInt) what & why.md
+++ b/面试题/js/1.['1', '2', '3'].map(parseInt) what & why.md
@@ -60,14 +60,14 @@ console.log(array);
 - 10 = 2^1 + 2^0 = 2
 - 11 = 2^1 _ 1 + 2^0 _ 1
 
-# 十进制转化为八进制
+# 八进制 17 转化成 十进制 
 
 parseInt("17", 8);
 
 - 17 = 8^1 _ 1 + 8^0 _ 7 = 8+7 = 15
 
-# 十进制转化为 16 进制
+# 16进制 F 转化成 十进制
 
-parseInt("FXX123", 16);
+parseInt("FXX123", 16); = 15
 
 - 123 = 16^2 + 16 \* 2 + 3 = 256 + 32 + 3 = 291
