--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -36,7 +36,12 @@
 - ✅ 31.柯里化
 - ✅ 32.0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题，number 最大数
 - ✅ 33 RAF 和 RIC 是什么
-34.ES6中set、map、weakMap的区别
+- ✅ 34.a===1&&a===2&&a===3 为 true
+- ES6 中 set、map、weakMap 的区别, Set 的用法，用 Set 实现数组去重
+- 模块化发展历史
+- var 怎么实现let
+- 进程通信的几种方式
+- isNaN 和 number.isNaN 区别
 
 # HTTP
 
